# modules/lonisVenteRest/lonisVenteRest-api/src/main/java/com/df/lonis/ventesrest/dto/v1_0/ConcessionnaireActivite.java
@@ -1,0 +1,576 @@
+package com.df.lonis.ventesrest.dto.v1_0;
+
+import com.fasterxml.jackson.annotation.JsonFilter;
+import com.fasterxml.jackson.annotation.JsonIgnore;
+import com.fasterxml.jackson.annotation.JsonProperty;
+
+import com.liferay.petra.function.UnsafeSupplier;
+import com.liferay.petra.string.StringBundler;
+import com.liferay.portal.kernel.util.StringUtil;
+import com.liferay.portal.vulcan.graphql.annotation.GraphQLField;
+import com.liferay.portal.vulcan.graphql.annotation.GraphQLName;
+import com.liferay.portal.vulcan.util.ObjectMapperUtil;
+
+import io.swagger.v3.oas.annotations.media.Schema;
+
+import java.io.Serializable;
+
+import java.util.Iterator;
+import java.util.Map;
+import java.util.Objects;
+import java.util.Set;
+
+import javax.annotation.Generated;
+
+import javax.xml.bind.annotation.XmlRootElement;
+
+/**
+ * @author HP
+ * @generated
+ */
+@Generated("")
+@GraphQLName("ConcessionnaireActivite")
+@JsonFilter("Liferay.Vulcan")
+@XmlRootElement(name = "ConcessionnaireActivite")
+public class ConcessionnaireActivite implements Serializable {
+
+	public static ConcessionnaireActivite toDTO(String json) {
+		return ObjectMapperUtil.readValue(ConcessionnaireActivite.class, json);
+	}
+
+	public static ConcessionnaireActivite unsafeToDTO(String json) {
+		return ObjectMapperUtil.unsafeReadValue(
+			ConcessionnaireActivite.class, json);
+	}
+
+	@Schema
+	public Long getChiffreAffaires() {
+		return chiffreAffaires;
+	}
+
+	public void setChiffreAffaires(Long chiffreAffaires) {
+		this.chiffreAffaires = chiffreAffaires;
+	}
+
+	@JsonIgnore
+	public void setChiffreAffaires(
+		UnsafeSupplier<Long, Exception> chiffreAffairesUnsafeSupplier) {
+
+		try {
+			chiffreAffaires = chiffreAffairesUnsafeSupplier.get();
+		}
+		catch (RuntimeException re) {
+			throw re;
+		}
+		catch (Exception e) {
+			throw new RuntimeException(e);
+		}
+	}
+
+	@GraphQLField
+	@JsonProperty(access = JsonProperty.Access.READ_WRITE)
+	protected Long chiffreAffaires;
+
+	@Schema
+	public String[] getConcessionnaireCodes() {
+		return concessionnaireCodes;
+	}
+
+	public void setConcessionnaireCodes(String[] concessionnaireCodes) {
+		this.concessionnaireCodes = concessionnaireCodes;
+	}
+
+	@JsonIgnore
+	public void setConcessionnaireCodes(
+		UnsafeSupplier<String[], Exception>
+			concessionnaireCodesUnsafeSupplier) {
+
+		try {
+			concessionnaireCodes = concessionnaireCodesUnsafeSupplier.get();
+		}
+		catch (RuntimeException re) {
+			throw re;
+		}
+		catch (Exception e) {
+			throw new RuntimeException(e);
+		}
+	}
+
+	@GraphQLField
+	@JsonProperty(access = JsonProperty.Access.READ_WRITE)
+	protected String[] concessionnaireCodes;
+
+	@Schema
+	public Long getConcessionnaireId() {
+		return concessionnaireId;
+	}
+
+	public void setConcessionnaireId(Long concessionnaireId) {
+		this.concessionnaireId = concessionnaireId;
+	}
+
+	@JsonIgnore
+	public void setConcessionnaireId(
+		UnsafeSupplier<Long, Exception> concessionnaireIdUnsafeSupplier) {
+
+		try {
+			concessionnaireId = concessionnaireIdUnsafeSupplier.get();
+		}
+		catch (RuntimeException re) {
+			throw re;
+		}
+		catch (Exception e) {
+			throw new RuntimeException(e);
+		}
+	}
+
+	@GraphQLField
+	@JsonProperty(access = JsonProperty.Access.READ_WRITE)
+	protected Long concessionnaireId;
+
+	@Schema
+	public String getNom() {
+		return nom;
+	}
+
+	public void setNom(String nom) {
+		this.nom = nom;
+	}
+
+	@JsonIgnore
+	public void setNom(UnsafeSupplier<String, Exception> nomUnsafeSupplier) {
+		try {
+			nom = nomUnsafeSupplier.get();
+		}
+		catch (RuntimeException re) {
+			throw re;
+		}
+		catch (Exception e) {
+			throw new RuntimeException(e);
+		}
+	}
+
+	@GraphQLField
+	@JsonProperty(access = JsonProperty.Access.READ_WRITE)
+	protected String nom;
+
+	@Schema
+	public Long getNombreOperations() {
+		return nombreOperations;
+	}
+
+	public void setNombreOperations(Long nombreOperations) {
+		this.nombreOperations = nombreOperations;
+	}
+
+	@JsonIgnore
+	public void setNombreOperations(
+		UnsafeSupplier<Long, Exception> nombreOperationsUnsafeSupplier) {
+
+		try {
+			nombreOperations = nombreOperationsUnsafeSupplier.get();
+		}
+		catch (RuntimeException re) {
+			throw re;
+		}
+		catch (Exception e) {
+			throw new RuntimeException(e);
+		}
+	}
+
+	@GraphQLField
+	@JsonProperty(access = JsonProperty.Access.READ_WRITE)
+	protected Long nombreOperations;
+
+	@Schema
+	public Integer getNombreTerminaux() {
+		return nombreTerminaux;
+	}
+
+	public void setNombreTerminaux(Integer nombreTerminaux) {
+		this.nombreTerminaux = nombreTerminaux;
+	}
+
+	@JsonIgnore
+	public void setNombreTerminaux(
+		UnsafeSupplier<Integer, Exception> nombreTerminauxUnsafeSupplier) {
+
+		try {
+			nombreTerminaux = nombreTerminauxUnsafeSupplier.get();
+		}
+		catch (RuntimeException re) {
+			throw re;
+		}
+		catch (Exception e) {
+			throw new RuntimeException(e);
+		}
+	}
+
+	@GraphQLField
+	@JsonProperty(access = JsonProperty.Access.READ_WRITE)
+	protected Integer nombreTerminaux;
+
+	@Schema
+	public String getPrenoms() {
+		return prenoms;
+	}
+
+	public void setPrenoms(String prenoms) {
+		this.prenoms = prenoms;
+	}
+
+	@JsonIgnore
+	public void setPrenoms(
+		UnsafeSupplier<String, Exception> prenomsUnsafeSupplier) {
+
+		try {
+			prenoms = prenomsUnsafeSupplier.get();
+		}
+		catch (RuntimeException re) {
+			throw re;
+		}
+		catch (Exception e) {
+			throw new RuntimeException(e);
+		}
+	}
+
+	@GraphQLField
+	@JsonProperty(access = JsonProperty.Access.READ_WRITE)
+	protected String prenoms;
+
+	@Schema
+	public Long getSoldeTotal() {
+		return soldeTotal;
+	}
+
+	public void setSoldeTotal(Long soldeTotal) {
+		this.soldeTotal = soldeTotal;
+	}
+
+	@JsonIgnore
+	public void setSoldeTotal(
+		UnsafeSupplier<Long, Exception> soldeTotalUnsafeSupplier) {
+
+		try {
+			soldeTotal = soldeTotalUnsafeSupplier.get();
+		}
+		catch (RuntimeException re) {
+			throw re;
+		}
+		catch (Exception e) {
+			throw new RuntimeException(e);
+		}
+	}
+
+	@GraphQLField
+	@JsonProperty(access = JsonProperty.Access.READ_WRITE)
+	protected Long soldeTotal;
+
+	@Schema
+	public String getTelephone() {
+		return telephone;
+	}
+
+	public void setTelephone(String telephone) {
+		this.telephone = telephone;
+	}
+
+	@JsonIgnore
+	public void setTelephone(
+		UnsafeSupplier<String, Exception> telephoneUnsafeSupplier) {
+
+		try {
+			telephone = telephoneUnsafeSupplier.get();
+		}
+		catch (RuntimeException re) {
+			throw re;
+		}
+		catch (Exception e) {
+			throw new RuntimeException(e);
+		}
+	}
+
+	@GraphQLField
+	@JsonProperty(access = JsonProperty.Access.READ_WRITE)
+	protected String telephone;
+
+	@Schema
+	public String getUid() {
+		return uid;
+	}
+
+	public void setUid(String uid) {
+		this.uid = uid;
+	}
+
+	@JsonIgnore
+	public void setUid(UnsafeSupplier<String, Exception> uidUnsafeSupplier) {
+		try {
+			uid = uidUnsafeSupplier.get();
+		}
+		catch (RuntimeException re) {
+			throw re;
+		}
+		catch (Exception e) {
+			throw new RuntimeException(e);
+		}
+	}
+
+	@GraphQLField
+	@JsonProperty(access = JsonProperty.Access.READ_WRITE)
+	protected String uid;
+
+	@Override
+	public boolean equals(Object object) {
+		if (this == object) {
+			return true;
+		}
+
+		if (!(object instanceof ConcessionnaireActivite)) {
+			return false;
+		}
+
+		ConcessionnaireActivite concessionnaireActivite =
+			(ConcessionnaireActivite)object;
+
+		return Objects.equals(toString(), concessionnaireActivite.toString());
+	}
+
+	@Override
+	public int hashCode() {
+		String string = toString();
+
+		return string.hashCode();
+	}
+
+	public String toString() {
+		StringBundler sb = new StringBundler();
+
+		sb.append("{");
+
+		if (chiffreAffaires != null) {
+			if (sb.length() > 1) {
+				sb.append(", ");
+			}
+
+			sb.append("\"chiffreAffaires\": ");
+
+			sb.append(chiffreAffaires);
+		}
+
+		if (concessionnaireCodes != null) {
+			if (sb.length() > 1) {
+				sb.append(", ");
+			}
+
+			sb.append("\"concessionnaireCodes\": ");
+
+			sb.append("[");
+
+			for (int i = 0; i < concessionnaireCodes.length; i++) {
+				sb.append("\"");
+
+				sb.append(_escape(concessionnaireCodes[i]));
+
+				sb.append("\"");
+
+				if ((i + 1) < concessionnaireCodes.length) {
+					sb.append(", ");
+				}
+			}
+
+			sb.append("]");
+		}
+
+		if (concessionnaireId != null) {
+			if (sb.length() > 1) {
+				sb.append(", ");
+			}
+
+			sb.append("\"concessionnaireId\": ");
+
+			sb.append(concessionnaireId);
+		}
+
+		if (nom != null) {
+			if (sb.length() > 1) {
+				sb.append(", ");
+			}
+
+			sb.append("\"nom\": ");
+
+			sb.append("\"");
+
+			sb.append(_escape(nom));
+
+			sb.append("\"");
+		}
+
+		if (nombreOperations != null) {
+			if (sb.length() > 1) {
+				sb.append(", ");
+			}
+
+			sb.append("\"nombreOperations\": ");
+
+			sb.append(nombreOperations);
+		}
+
+		if (nombreTerminaux != null) {
+			if (sb.length() > 1) {
+				sb.append(", ");
+			}
+
+			sb.append("\"nombreTerminaux\": ");
+
+			sb.append(nombreTerminaux);
+		}
+
+		if (prenoms != null) {
+			if (sb.length() > 1) {
+				sb.append(", ");
+			}
+
+			sb.append("\"prenoms\": ");
+
+			sb.append("\"");
+
+			sb.append(_escape(prenoms));
+
+			sb.append("\"");
+		}
+
+		if (soldeTotal != null) {
+			if (sb.length() > 1) {
+				sb.append(", ");
+			}
+
+			sb.append("\"soldeTotal\": ");
+
+			sb.append(soldeTotal);
+		}
+
+		if (telephone != null) {
+			if (sb.length() > 1) {
+				sb.append(", ");
+			}
+
+			sb.append("\"telephone\": ");
+
+			sb.append("\"");
+
+			sb.append(_escape(telephone));
+
+			sb.append("\"");
+		}
+
+		if (uid != null) {
+			if (sb.length() > 1) {
+				sb.append(", ");
+			}
+
+			sb.append("\"uid\": ");
+
+			sb.append("\"");
+
+			sb.append(_escape(uid));
+
+			sb.append("\"");
+		}
+
+		sb.append("}");
+
+		return sb.toString();
+	}
+
+	@Schema(
+		accessMode = Schema.AccessMode.READ_ONLY,
+		defaultValue = "com.df.lonis.ventesrest.dto.v1_0.ConcessionnaireActivite",
+		name = "x-class-name"
+	)
+	public String xClassName;
+
+	private static String _escape(Object object) {
+		return StringUtil.replace(
+			String.valueOf(object), _JSON_ESCAPE_STRINGS[0],
+			_JSON_ESCAPE_STRINGS[1]);
+	}
+
+	private static boolean _isArray(Object value) {
+		if (value == null) {
+			return false;
+		}
+
+		Class<?> clazz = value.getClass();
+
+		return clazz.isArray();
+	}
+
+	private static String _toJSON(Map<String, ?> map) {
+		StringBuilder sb = new StringBuilder("{");
+
+		@SuppressWarnings("unchecked")
+		Set set = map.entrySet();
+
+		@SuppressWarnings("unchecked")
+		Iterator<Map.Entry<String, ?>> iterator = set.iterator();
+
+		while (iterator.hasNext()) {
+			Map.Entry<String, ?> entry = iterator.next();
+
+			sb.append("\"");
+			sb.append(_escape(entry.getKey()));
+			sb.append("\": ");
+
+			Object value = entry.getValue();
+
+			if (_isArray(value)) {
+				sb.append("[");
+
+				Object[] valueArray = (Object[])value;
+
+				for (int i = 0; i < valueArray.length; i++) {
+					if (valueArray[i] instanceof String) {
+						sb.append("\"");
+						sb.append(valueArray[i]);
+						sb.append("\"");
+					}
+					else {
+						sb.append(valueArray[i]);
+					}
+
+					if ((i + 1) < valueArray.length) {
+						sb.append(", ");
+					}
+				}
+
+				sb.append("]");
+			}
+			else if (value instanceof Map) {
+				sb.append(_toJSON((Map<String, ?>)value));
+			}
+			else if (value instanceof String) {
+				sb.append("\"");
+				sb.append(_escape(value));
+				sb.append("\"");
+			}
+			else {
+				sb.append(value);
+			}
+
+			if (iterator.hasNext()) {
+				sb.append(", ");
+			}
+		}
+
+		sb.append("}");
+
+		return sb.toString();
+	}
+
+	private static final String[][] _JSON_ESCAPE_STRINGS = {
+		{"\\", "\"", "\b", "\f", "\n", "\r", "\t"},
+		{"\\\\", "\\\"", "\\b", "\\f", "\\n", "\\r", "\\t"}
+	};
+
+}
