# modules/lonisVenteRest/lonisVenteRest-impl/src/main/java/com/df/lonis/ventesrest/internal/resource/v1_0/BaseConcessionnaireResourceImpl.java
@@ -1,6 +1,7 @@
 package com.df.lonis.ventesrest.internal.resource.v1_0;
 
 import com.df.lonis.ventesrest.dto.v1_0.Concessionnaire;
+import com.df.lonis.ventesrest.dto.v1_0.ConcessionnaireActivite;
 import com.df.lonis.ventesrest.dto.v1_0.ConcessionnaireBody;
 import com.df.lonis.ventesrest.dto.v1_0.ConcessionnaireDetail;
 import com.df.lonis.ventesrest.dto.v1_0.ConcessionnaireProduit;
@@ -134,6 +135,45 @@ public abstract class BaseConcessionnaireResourceImpl
 		throws Exception {
 
 		return new Concessionnaire();
+	}
+
+	/**
+	 * Invoke this method with the command line:
+	 *
+	 * curl -X 'GET' 'http://localhost:8080/o/lonisVenteRest/v1.0/concessionnaires/top-actifs'  -u 'test@liferay.com:test'
+	 */
+	@io.swagger.v3.oas.annotations.Operation(
+		description = "Top concessionnaires les plus actifs par chiffre d'affaires"
+	)
+	@io.swagger.v3.oas.annotations.Parameters(
+		value = {
+			@io.swagger.v3.oas.annotations.Parameter(
+				in = io.swagger.v3.oas.annotations.enums.ParameterIn.QUERY,
+				name = "limit"
+			),
+			@io.swagger.v3.oas.annotations.Parameter(
+				in = io.swagger.v3.oas.annotations.enums.ParameterIn.QUERY,
+				name = "filter"
+			)
+		}
+	)
+	@io.swagger.v3.oas.annotations.tags.Tags(
+		value = {
+			@io.swagger.v3.oas.annotations.tags.Tag(name = "Concessionnaire")
+		}
+	)
+	@javax.ws.rs.GET
+	@javax.ws.rs.Path("/concessionnaires/top-actifs")
+	@javax.ws.rs.Produces({"application/json", "application/xml"})
+	@Override
+	public Page<ConcessionnaireActivite> getTopConcessionnairesActifs(
+			@io.swagger.v3.oas.annotations.Parameter(hidden = true)
+			@javax.ws.rs.DefaultValue("10") @javax.ws.rs.QueryParam("limit")
+			Integer limit,
+			@javax.ws.rs.core.Context Filter filter)
+		throws Exception {
+
+		return Page.of(Collections.emptyList());
 	}
 
 	/**
